--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Вопросы</h2>
 
-<% @question.each do |question| %>
-  <p>Вопрос <%= question.id %></p>
+<% @questions.each do |question| %>
+  <p><%= link_to "Вопрос #{question.id}", "/questions/#{question.id}"%></p>
 <% end %>
