--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Вопросы</h2>
 
 <% @questions.each do |question| %>
-  <p><%= link_to "Вопрос #{question.id}", "/questions/#{question.id}" %></p>
+  <p><%= link_to "Вопрос #{question.id}", question_path(id: question.id) %></p>
 <% end %>
