--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,3 +3,5 @@
 <% @questions.each do |question| %>
   <p><%= link_to "Вопрос #{question.id}", question_path(question) %></p>
 <% end %>
+
+<p><%= link_to "Создать новый вопрос", new_question_path %></p>
