--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -5,5 +5,5 @@
   <p><%= form.text_area :body, rows: 5 %></p>
   <p><%= form.label :user_id %></p>
   <p><%= form.text_field :user_id %></p>
-  <p><%= form.submit 'Создать'%></p>
+  <p><%= form.submit 'Сохранить'%></p>
 <% end %>
