--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,10 +1,12 @@
-<h2 class="title-lg mb">Редактирование вопроса <%= @question.id %></h2>
+<div class="container">
+  
+    <h2 class="title-lg mb">Редактирование вопроса <%= @question.id %></h2>
 
-<%= form_with model: @question do |form| %>
-  <p><%= form.label :body, 'Текст вопроса' %></p>
-  <p><%= form.text_area :body, rows: 5 %></p>
+    <%= form_with model: @question do |form| %>
+    <p><%= form.label :body, 'Текст вопроса' %></p>
+    <p><%= form.text_area :body, rows: 5 %></p>
 
-  <p class="mt"><%= form.label :user_id %></p>
-  <p><%= form.text_field :user_id %></p>
-  <p class="mt"><%= form.submit 'Сохранить'%></p>
-<% end %>
+    <p class="mt"><%= form.label :user_id %></p>
+    <p><%= form.text_field :user_id %></p>
+    <p class="mt"><%= form.submit 'Сохранить'%></p>
+</div>
