--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="title-lg mb">Вопрос <%= @question.id %></h2>
 
 <p class="mb-sm"><%= @question.body %></p>
@@ -8,3 +9,4 @@
 <div><%= button_to 'Удалить вопрос', question_path(@question), method: :delete %></div>
 
 <p class="mt"><%= link_to "Все вопросы", questions_path %></p>
+</div>
