--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -10,6 +10,6 @@
   <p class="mt"><%= form.label :user_id %></p>
   <p><%= form.text_field :user_id %></p>
 
-  <p class="mt"><%= form.submit 'Создать'%></p>
+  <p class="mt"><%= form.submit 'Создать', class: 'button button-main' %></p>
 <% end %>
 </div>
