--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+ <div class="container">
   <h2 class="title-lg mb">Новый вопрос</h2>
 
   <form action="/questions" method="POST">
@@ -8,7 +8,7 @@
   <p><%= form.text_area :body, rows: 5, class: 'form-text-area' %></p>
 
   <p class="mt"><%= form.label :user_id %></p>
-  <p><%= form.text_field :user_id, class: 'form-text-field' %></p>
+  <p><%= form.number_field :user_id, class: 'form-text-field' %></p>
 
   <p class="mt"><%= form.submit 'Создать', class: 'button button-main' %></p>
 <% end %>
