--- a/app/assets/stylesheets/button.css
+++ b/app/assets/stylesheets/button.css
@@ -1,13 +1,13 @@
 .button {
   border: 0;
   border-radius: 3px;
-  color: #9b2226;
+  color: #696969;
   display: inline-block;
   font-size: 14px;
   padding: 8px 13px 7px;
   text-decoration: none; 
 }
 
-.button_main {
-  background-color: #9a031e;
+.button-main {
+  background-color: #b0c4de;
 }
