--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,7 +7,7 @@
   <p><%= form.label :body, 'Текст вопроса' %></p>
   <p><%= form.text_area :body, rows: 5, class: 'form-text-area' %></p>
 
-  <p class="mt"><%= form.label :user_id %></p>
+  <p class="mt"><%= form.label :user_id, 'user ID' %></p>
   <p><%= form.number_field :user_id, class: 'form-text-field' %></p>
 
   <p class="mt"><%= form.submit 'Создать', class: 'button button-main' %></p>
