--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,9 +5,10 @@
   <p>user_id: <b><%= @question.user_id %></b></p>
 
   <div class="mt">
-	<%= link_to fa_icon('pencil'), edit_question_path(@question), title: 'Изменить вопрос' %>
+  	<%= link_to fa_icon('pencil'), edit_question_path(@question), title: 'Изменить вопрос' %>
 
-  <%= button_to fa_icon('trash-o'), question_path(@question), method: :delete, title: 'Удалить вопрос' %></div>
+    <%= button_to fa_icon('trash-o'), question_path(@question), method: :delete, title: 'Удалить вопрос' %>
+  </div>
 
   <p class="mt"><%= link_to "Все вопросы", questions_path %>
 </div>
