--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,4 +8,7 @@
   <p class="mt">
     <%= link_to "Создать новый вопрос", new_question_path, class: 'button button-main'%>
   </p>
+  <br>
+  <hr> 
+  <p class="mt"><%= render 'form', question: @question %></p>
   </div>
