Create a question.css write the class .question-footer.

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="text-sm question-footer">
-	<div class="text-grey">
+	<div class="text-gray">
 		<%= l(question.created_at, format: :short) %>
 	</div>
 
