--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,13 @@
 
   <body>
     <div class="wrapper">
-      <%= yield %>
+      <% if flash[:notice].present? %>
+        <p class="mb mt message message-notice">
+          <%= flash[:notice] %>
+        </p>
+    <% end %>
+
+       <%= yield %>
     </div>
   </body>
 </html>
