--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -7,9 +7,9 @@
 		<%= l(question.created_at, format: :short) %>
 	</div>
 
-	<div class="text-right">
-		<%= link_to fa_icon('pencil'), edit_question_path(@question), title: 'Изменить вопрос' %>
+	<div >
+		<%= link_to fa_icon('pencil'), edit_question_path(question), title: 'Изменить вопрос' %>
 
-	    <%= button_to fa_icon('trash-o'), question_path(@question), method: :delete, title: 'Удалить вопрос' %>
+	    <%= button_to fa_icon('trash-o'), question_path(question), method: :delete, title: 'Удалить вопрос' %>
 	</div>
 </div>
