--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,7 +1,10 @@
 body {
 	background: #2f3e46;
-	display: flex;
-	justify-content: center;
+	
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom: 25px;
 }
 
 .wrapper {
