--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,17 @@
 
   <body>
     <div class="wrapper">
-      <% if flash[:notice].present? %>
-        <p class="mb mt message message-notice">
-          <%= flash[:notice] %>
-        </p>
+    <% if flash[:notice].present? %>
+      <p class="mb mt message message-notice">
+         <%= flash[:notice] %>      
+      </p>
+
+    <% elsif flash[:alert].present? %>
+      <p class="mb mt message message-alert">
+        <%= flash[:alert] %>
+      </p>   
     <% end %>
+
 
        <%= yield %>
     </div>
