--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -19,3 +19,21 @@ h1, h2, h3, h4, h5, h6 {
 	border-radius: 10px;
 	padding: 20px;
 }
+
+.container, .navbar {
+	padding: 20px;
+}
+
+.navbar {
+	align-items: center;
+	background-color: #008080;
+	border-radius: 10px;
+	color: white;
+	display: flex;
+	justify-content: space-between;	
+}
+
+.navbar a {
+	color: white;
+	text-decoration: none;
+}
