--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,6 +13,9 @@
 			<p class="mt"><%= form.label :email, 'Укажите вашу почту' %></p>
 			<p><%= form.text_field :email, class: 'form-text-field' %></p>
 
+			<p class="mt"><%= form.label :password %></p>
+			<p><%= form.password_field :password, class: 'form-text-field' %></p>
+
 			<p class="mt-lg"><%= form.submit 'Зарегестрироваться', class: 'button button-main' %></p>
 
 		<% end %>
