--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
 	<h2 class="title">Присоединяйся и спрашивай!</h2>	
 
+	<% if @user.errors.any? %>
+	<div class="mt">
+	  <% @user.errors.full_messages.each do |message| %>
+	    <p class="mb-sm text-red"><%= message %></p>
+	  <% end %>
+	</div><br> 
+	<% end %>
+
+
 	<div class="mt ">
 		<%= form_with model: @user, data: {turbo: false} do |form| %>
 
