--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,19 +13,19 @@
 	<div class="mt ">
 		<%= form_with model: @user, data: {turbo: false} do |form| %>
 
-			<p"><%= form.label :name, 'Ваше имя' %></p>
+			<p><%= form.label :name, 'Ваше имя' %></p>
 			<p><%= form.text_field :name, class: 'form-text-field' %></p>
 			
 			<p class="mt"><%= form.label :nickname, 'Ваш псевдоним' %></p>
 			<p><%= form.text_field :nickname, class: 'form-text-field' %></p>
 
-			<p class="mt"><%= form.label :email, 'Укажите вашу почту' %></p>
+			<p class="mt"><%= form.label :email, 'Укажите почту' %></p>
 			<p><%= form.text_field :email, class: 'form-text-field' %></p>
 
-			<p class="mt"><%= form.label :password %></p>
+			<p class="mt"><%= form.label :password, 'Пароль' %></p>
 			<p><%= form.password_field :password, class: 'form-text-field' %></p>
 
-			<p class="mt"><%= form.label :password_confirmation %></p>
+			<p class="mt"><%= form.label :password_confirmation, 'Подтвердите пароль' %></p>
 			<p><%= form.password_field :password_confirmation, class: 'form-text-field' %></p>
 
 			<p class="mt-lg"><%= form.submit 'Зарегестрироваться', class: 'button button-main' %></p>
