--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -1,11 +1,13 @@
 .message {
 	border: 1px solid #d0d0d0;
-	padding: 10px 15px;
+	border-radius: 5px;
+	padding: 10px 15px;	
 }
 
 .message-notice {
 	background-color: #ffeec2;
 	border-color: #daa520;
+	border-radius: 5px;
 }
 
 .message-alert {
