--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -9,9 +9,52 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .wrapper {
-	max-width: 800px;
-	margin: 20px;
-	width: 100%;
+	align-items: center;
+	justify-content: center;
+  margin: 20px auto;
+  max-height: 600px; /* Макс высота по умолчанию */
+  width: 100%;
+  position: relative;  
+}
+
+@media (max-width: 1280px) {
+  .wrapper {
+    max-width: 90%;
+    max-height: 550px;
+    margin: 25px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .wrapper {
+    max-width: 95%;
+    max-height: 500px;
+    margin: 20px;
+  }
+}
+
+@media (max-width: 720px) {
+  .wrapper {
+    max-width: 100%;
+    max-height: 450px;
+    margin: 15px;
+  }
+}
+
+@media (max-width: 540px) {
+  .wrapper {
+    max-width: 100%;
+    max-height: 400px;
+    margin: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .wrapper {
+    max-width: 100%;
+    max-height: 350px;
+    margin: 10px;
+  }
 }
 
 .container {
