--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -2,7 +2,7 @@
 .form-text-field {
   border-radius: 3px;
   border: 1px solid #2f3e46;
-  padding: 7.5px 10px;
+  padding: 3.5px 10px;
 }
 
 .form-text-area:focus,
@@ -12,6 +12,11 @@
 }
 
 .form-text-area {
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.form-text-field {
   box-sizing: border-box;
   width: 100%;
 }
